--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,11 @@
   "name": "@ai-voice-cloner/backend",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "node dist/main.js",
+    "start:dev": "nest start --watch",
+    "build": "nest build"
+  },
   "nx": {
     "targets": {
       "build": {
@@ -79,21 +84,24 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^1.4.11",
+    "@types/passport-jwt": "^3.0.13",
+    "axios": "^1.6.0",
+    "bcrypt": "^5.1.0",
+    "gtts": "^0.2.1",
+    "multer": "^1.4.5-lts.1",
+    "node-gtts": "^2.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "bcrypt": "^5.1.0",
-    "stripe": "^14.0.0",
-    "axios": "^1.6.0",
-    "multer": "^1.4.5-lts.1",
-    "@types/multer": "^1.4.11",
-    "@types/bcrypt": "^5.0.2",
-    "@types/passport-jwt": "^3.0.13",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "say": "^0.16.0",
+    "stripe": "^14.0.0"
   }
 }
